<resources>
    <string name="app_name">Unidas con Valor</string>
    <string name="categories">Categorías</string>
    <string name="mycupons">Tus descuentos</string>
    <string name="especiales">Especiales</string>
    <string name="myorders">Tus ordenes</string>
    <string name="business">Negocios</string>
    <string name="reservations">Tus órdenes</string>
    <string name="find">Busca tus descuentos</string>
    <string name="offert_day">Oferta del día</string>
    <string name="cat_disp">Categorías disponibles</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="facebook_app_id">671710776559354</string>
    <string name="fb_login_protocol_scheme">fb671710776559354</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="active">Activo</string>
    <string name="profile">Perfil</string>
    <string name="to_cupons">A 5 descuentos para tu próximo nivel.</string>
    <string name="cup_disp">descuentos disponibles</string>
    <string name="ver_cupon">Ver descuento</string>

    <string name="para">Para</string>
    <string name="estudiantes">Estudiantes</string>
    <string name="empresas">Empresas</string>
    <string name="edt_login">Ingresa tu número de alumno</string>
    <string name="edt_login2">Ingresa tu número de empleado</string>
    <string name="ayuda">Ayuda</string>
    <string name="iniciar">Iniciar</string>
    <string name="ya_tienes_cuenta">¿Ya tienes una cuenta?</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="recuperar">Recuperar contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="validate_msj">Para continuar necesitamos validar tu número de teléfono</string>
    <string name="renviar">Volver a enviar código</string>
    <string name="find_business">Busca negocios</string>
    <string name="ver_cupones">Ver descuentos</string>
    <string name="puedes">Puedes reservar</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_ihave_account">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_tarjeta_participa">participa</string>
    <string name="title_activity_tarjeta_unidos">Tarjeta_unidos</string>
    <string name="title_activity_contactos_tarjeta">Tarjeta_contactos</string>
    <string name="title_activity_edit_perfil_tarjeta">Tarjeta_edit_perfil</string>
    <string name="apikey">SKORM8Dpenndw1VuDsNp</string>
    <string name="apiurl">http://api.sistemabs.com/</string>
    <string name="principalurl">http://sistemabs.com/</string>
    <string name="apitarurl">http://api.sistemabs.com/GetInfoByCardId</string>
    <string name="apitarupdurl">http://api.sistemabs.com/UpdateContactByCardId</string>
    <string name="apitarupdparturl">http://api.sistemabs.com/UpdateProgramAppByCardId</string>
    <string name="title_activity_tarjeta_menu_ini"></string>
    <string name="apitarpointsurl">http://api.sistemabs.com/PointsPanicAlert</string>
</resources>
