<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.creatio.imm.Login">

    <ImageView
        android:id="@+id/imgFondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_fondo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo_white" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/para"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:gravity="right|center_vertical"
                    android:text="@string/estudiantes"
                    android:textColor="@color/white" />

                <Switch
                    android:id="@+id/swType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchPadding="16dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/empresas"
                    android:textColor="@color/white" />
            </LinearLayout>

            <Spinner
                android:id="@+id/sp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_white"
                android:dropDownWidth="match_parent"
                android:spinnerMode="dialog"
                android:visibility="gone" />

            <AutoCompleteTextView
                android:id="@+id/edtAU"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_white"
                android:ems="10"
                android:hint="Busca tu escuela/negocio"
                android:paddingLeft="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/edtCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_white"
                android:ems="10"
                android:hint="Ingresa tu matricula/No. empleado"
                android:inputType="textPersonName"
                android:paddingLeft="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="Acepto los terminos y la política de privacidad."
                android:textColor="@color/white"
                android:textColorLink="@color/white" />

            <TextView
                android:id="@+id/txtHelp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="right|center_vertical"
                android:text="@string/ayuda"
                android:textColor="@color/white" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btnLogin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                app:initialCornerAngle="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/round_btn_primary"
                android:gravity="center"
                android:text="@string/iniciar" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/ya_tienes_cuenta"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnLoginYaTengo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_white_round"
                android:text="@string/iniciar_sesion"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_white_round"
                android:text="Cancelar"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
