<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp">

        <ImageView
            android:id="@+id/img_fondo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/img_fondo2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="64dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtStatus"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:background="@drawable/round_btn_green_no_pad"
                        android:gravity="center"
                        android:text="@string/active"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="Android Studio"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtProfile"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_vertical"
                        android:text="@string/profile"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNivel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_facebook"
                    android:gravity="center"
                    android:text="Nivel clásico"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtCountCupons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="0"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="4dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/txtNivelMsj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/to_cupons"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTypeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="UACH"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtTypeDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
